--- a/examples/SASReportElement.html
+++ b/examples/SASReportElement.html
@@ -14,6 +14,6 @@
     </style>
   </head>
   <body>
-    <sas-report url="YOUR-VIYA-URL" reportUri="YOUR-REPORT-URI" authenticationType="guest" hideNavigation></sas-report>
+    <sas-report url="https://viya.openplus.ca" reportUri="/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d" authenticationType="guest" hideNavigation="false"></sas-report>
   </body>
 </html>
