--- a/examples/SASReportElementJS.html
+++ b/examples/SASReportElementJS.html
@@ -12,7 +12,7 @@
     window.addEventListener("vaReportComponents.loaded", () => {
       const reportElement = new vaReportComponents.SASReportElement();
       reportElement.url = "YOUR-VIYA-URL";
-      reportElement.reportUri = "YOUR-REPORT-URI";
+      reportElement.reportUri = "/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d";
       reportElement.authenticationType = "guest";
       reportElement.style.setProperty("--sas-report-background-color", "#0074BE");
       reportElement.style.setProperty("--sas-report-padding", "1rem");
