Add server name

--- a/examples/connectToServer.html
+++ b/examples/connectToServer.html
@@ -10,7 +10,7 @@
   <body></body>
   <script>
     window.addEventListener("vaReportComponents.loaded", () => {
-      vaReportComponents.connectToServer("YOUR-SERVER-URL", { authenticationType: "guest" });
+      vaReportComponents.connectToServer("https://viya.openplus.ca", { authenticationType: "guest" });
     });
   </script>
 </html>
