--- a/examples/SASReportElementJS.html
+++ b/examples/SASReportElementJS.html
@@ -11,7 +11,7 @@
   <script> 
     window.addEventListener("vaReportComponents.loaded", () => {
       const reportElement = new vaReportComponents.SASReportElement();
-      reportElement.url = "YOUR-VIYA-URL";
+      reportElement.url = "https://viya.openplus.ca";
       reportElement.reportUri = "/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d";
       reportElement.authenticationType = "guest";
       reportElement.style.setProperty("--sas-report-background-color", "#0074BE");
