--- a/examples/SASReportElement.html
+++ b/examples/SASReportElement.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>VIYA Sample Element</title>
     <script async src="https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js"></script>
     <style>
       html {
