--- a/examples/registerDataDrivenContent.html
+++ b/examples/registerDataDrivenContent.html
@@ -80,9 +80,9 @@
       <div class="container left-content">
         <sas-report-object
           authenticationType="guest"
-          url="{SAS-VIYA-URL}"
-          reportUri="{REPORT-URI}"
-          objectName="{OBJECT-NAME}"
+          url="https://viya.openplus.ca"
+          reportUri="/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d"
+          objectName="ve26"
         ></sas-report-object>
       </div>
       <div class="container right-content">
