changed balance of server variables

--- a/examples/registerDataDrivenContent.html
+++ b/examples/registerDataDrivenContent.html
@@ -96,9 +96,9 @@
       const ddcHandle = vaReportComponents.registerDataDrivenContent(
         {
           authenticationType: 'guest',
-          url: '{SAS-VIYA-URL}',
-          reportUri: '{REPORT-URI}',
-          objectName: '{OBJECT-NAME}',
+          url: 'https://viya.openplus.ca',
+          reportUri: '/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d',
+          objectName: 've26',
         },
         handleDataMessage
       );
