Added server config and report id

--- a/examples/SASReportObjectElement.html
+++ b/examples/SASReportObjectElement.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <sas-report-object
-      url="YOUR-VIYA-URL"
-      reportUri="YOUR-REPORT-URI"
-      objectName="YOUR-OBJECT-NAME"
+      url="https://viya.openplus.ca"
+      reportUri="/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d"
+      objectName="ve26"
       class="surveyResults"
     ></sas-report-object>
   </body>
