--- a/examples/SASReportObjectElement-openplus.html
+++ b/examples/SASReportObjectElement-openplus.html
@@ -19,6 +19,7 @@
       url="https://viya.openplus.ca"
       reportUri="/reports/reports/b1419ed2-a1d8-492d-9296-8a51768d958d"
       objectName="ve26"
+      authenticationType="guest" 
       class="surveyResults"
     ></sas-report-object>
   </body>
