--- a/examples/SASReportObjectElement-openplus.html
+++ b/examples/SASReportObjectElement-openplus.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <script async src="https://unpkg.com/@sassoftware/va-report-components@0.3.1/dist/umd/va-report-components.js"></script>
+    <script async src="https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js"></script>
     <style>
       html {
         background-color: #f0f0f0;
